--- a/bin/SystemTaskManagement.fxml
+++ b/bin/SystemTaskManagement.fxml
@@ -40,6 +40,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -47,8 +48,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.java">
+<VBox prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
   <children>
     <SplitPane dividerPositions="0.2505567928730512, 0.7505567928730512" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
       <items>
@@ -66,7 +68,9 @@
                   <TextField fx:id="mataKuliahInput" layoutX="14.0" layoutY="94.0" />
                   <DatePicker fx:id="deadLineInput" layoutX="14.0" layoutY="189.0" />
                   <Label layoutX="14.0" layoutY="172.0" text="Deadline" />
-                  <Button layoutX="47.0" layoutY="276.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Input" />
+                  <Button layoutX="47.0" layoutY="476.0" mnemonicParsing="false" onAction="#input" prefHeight="25.0" prefWidth="109.0" text="Input" />
+                  <Text layoutX="14.0" layoutY="257.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Details" />
+                  <TextArea fx:id="detailsInput" layoutX="11.0" layoutY="261.0" prefHeight="200.0" prefWidth="200.0" style="-fx-wrap-text: true;" />
           </children>
         </AnchorPane>
         <ScrollPane prefHeight="-1.0" prefWidth="-1.0">
@@ -87,6 +91,47 @@
         <AnchorPane>
           <children>
             <Label alignment="CENTER" font="$x1" layoutX="14.0" layoutY="14.0" style="&#10;" text="Details" textAlignment="CENTER" textFill="$x2" wrapText="false" />
+                  <Label layoutX="14.0" layoutY="84.0" text="Mata Kuliah:">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="152.0" text="Deadline:">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="mataKuliahD" layoutX="16.0" layoutY="114.0" prefHeight="30.0" prefWidth="187.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="deadLineD" layoutX="16.0" layoutY="189.0" prefHeight="30.0" prefWidth="187.0" textFill="RED">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="234.0" text="Tanggal Input:">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="TgglInputD" layoutX="16.0" layoutY="273.0" prefHeight="30.0" prefWidth="187.0">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="16.0" layoutY="319.0" text="Details:">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="detailsD" layoutX="16.0" layoutY="349.0" prefHeight="158.0" prefWidth="187.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="81.0" layoutY="522.0" mnemonicParsing="false" onAction="#remove" text="Remove" />
           </children>
         </AnchorPane>
       </items>
