--- a/bin/signUpScene.fxml
+++ b/bin/signUpScene.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="357.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ControllerSignUp">
    <children>
       <TextField fx:id="UsernameSU" layoutX="54.0" layoutY="136.0" prefHeight="25.0" prefWidth="251.0" />
@@ -33,10 +32,12 @@
          </font>
       </Text>
       <PasswordField fx:id="CPasswordSU" layoutX="53.0" layoutY="263.0" prefHeight="25.0" prefWidth="251.0" />
-      <Button layoutX="111.0" layoutY="318.0" mnemonicParsing="false" onAction="#signUp" prefHeight="47.0" prefWidth="135.0" text="SIGN UP">
+      <Button layoutX="112.0" layoutY="307.0" mnemonicParsing="false" onAction="#signUp" prefHeight="47.0" prefWidth="135.0" text="SIGN UP">
          <font>
             <Font size="22.0" />
          </font>
       </Button>
+      <Text layoutX="98.0" layoutY="374.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Already have an Account?" />
+      <Button layoutX="235.0" layoutY="357.0" mnemonicParsing="false" onAction="#login" text="Login" />
    </children>
 </Pane>
